Fixed: distorted non-squared covers

--- a/public/css/jukebox.css
+++ b/public/css/jukebox.css
@@ -94,7 +94,7 @@ body {
 }
 .cover img {
   width: 300px;
-  height: 300px;
+  max-height: 300px;
   box-shadow: 0 0 3px #222;
 }
 .cover .btn-lg {
